--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
    <script src="sounds.js"></script>
    <script src="letter.js"></script>
+   <script src="banner.js"></script>
    <script src="main.js"></script>
   </body>
 </html>
