--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <canvas id="my-first-canvas" width="500" height="300"></canvas>
 
+   <script src="levels.js"></script>
    <script src="sounds.js"></script>
    <script src="letter.js"></script>
    <script src="banner.js"></script>
